--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">五十噚</a>
                                 <a href="#">百达翡丽</a>
                                 <a href="#">复杂功能计时</a>
@@ -250,7 +250,7 @@
                                     <img src="images/list/list1/list_right1.jpg" alt="">
                                 </a>
                             </div>
-                        </div>
+                        </div> 
                     </div>
                 </li>
                 <li>
@@ -336,7 +336,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">    
+                            <div class="index_left_nav_list_btn">    
                                 <a href="#">蓝气球</a>
                                 <a href="#">碟飞</a>
                                 <a href="#">水鬼</a>
@@ -444,7 +444,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">名匠</a>
                                 <a href="#">星空表</a>
                                 <a href="#">依百克四驱</a>
@@ -594,7 +594,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">力洛克</a>
                                 <a href="#">东方星</a>
                                 <a href="#">贝伦赛丽</a>
@@ -767,7 +767,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">名匠</a>
                                 <a href="#">星空表</a>
                                 <a href="#">依百克四驱</a>
@@ -837,7 +837,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">海鸥陀飞轮</a>
                                 <a href="#">飞亚达</a>
                                 <a href="#">智能表</a>
@@ -891,7 +891,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">积优</a>
                                 <a href="#">欧时浩</a>
                                 <a href="#">奇美拉</a>
@@ -935,7 +935,7 @@
                         </div>
                         <div class="index_left_nav_list_hot ">
                             <p class="index_left_nav_list_tit">热词</p>
-                            <div id="index_left_nav_list_btn">
+                            <div class="index_left_nav_list_btn">
                                 <a href="#">延保服务</a>
                                 <a href="#">电池服务</a>
                                 <a href="#">联保服务</a>
@@ -1001,7 +1001,7 @@
             <div class="swiper-button-next"></div>
         </div>
         <div class="zd_index_list_item wrap">
-            <ul>
+            <ul class="clearfix">
                 <li>
                     <a href="#">
                         <img src="images/index_list_item1.jpg" alt="">
@@ -1023,6 +1023,10 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        <div class="zd_index_time_shop wrap">
+            <h2 class="zd_index_limit_time">限时购</h2>
+            
         </div>
     </div>
     <!-- 主体部分结束 -->
