购物车未登录时界面

--- a/shop_car.html
+++ b/shop_car.html
@@ -20,7 +20,7 @@
             </div>
             <div class="header_right">
                 <ul>
-                    <li>
+                    <li class="changeColor">
                         <i></i>
                         <span>购物车</span>
                     </li>
@@ -37,6 +37,15 @@
                         <span>等待签收</span>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="shopNull">
+            <i></i>
+            <p class="p1">你的购物车还是空的</p>
+            <p class="p2">现在<a href="">登录</a>，购物车信息将一直为您保存</p>
+            <div>
+                <a class="a1" href="">马上购物</a>
+                <a class="a2" href="">看看收藏</a>
             </div>
         </div>
         <div class="shopAll">
