主页左侧导航栏和隐藏导航栏bug修改

--- a/index.html
+++ b/index.html
@@ -910,7 +910,6 @@
                 </ul>
             </div>
         </div>
-
         <!-- <div class="bot">
             <div class="bot_msg">
                 <div class="bot_msg_shape"></div>
@@ -929,7 +928,7 @@
             </div>
         </div> -->
     </div>
-    <div class="index_hide_nav_list_bg">
+    <div class="index_hide_nav_list_bg hide">
         <div class="index_hide_nav_list wrap">
             <a href="javascript:void(0)">
                 <img src="images/logo-icon-w.png">
@@ -956,9 +955,21 @@
                 </ul>
             </div>
             <div class="index_nav_right_cart">
-                    <a href="javascript:void(0)"></a>
+                <a href="javascript:void(0)"></a>
+            </div>
+            <div class="index_nav_right_glass">
+                <a href="javascript:void(0)"></a>
+            </div>
+            <div class="index_nav_right_glass_more clearfix">
+                <i class="index_nav_right_glass_arrow"></i>
+                <input type="text" name="" id="index_nav_right_glass_input" value="劳力士">
+                <div class="index_right_hide_nav hide">
+                    <p>热门推荐</p>
+                    <a href="javascript:void(0)">劳力士</a>
                 </div>
-            <div class="index_nav_right_glass"></div>
+            </div>
+
+            <!-- <div class="index_search">劳力士</div> -->
         </div>
     </div>
     <!-- 万表网首部结束  -->
@@ -1050,6 +1061,7 @@
         </div>
     </div>
     <!-- 主体部分结束 -->
+
     <!-- 万表网尾部开始 -->
     <div class="footer wrap">
         <div class="top_foot clearfix">
