--- a/login.html
+++ b/login.html
@@ -45,9 +45,9 @@
                             </div> -->
                             <!-- 密码登录 -->
                             <div class="m-main-login-div">
-                                <input type="text" placeholder="手机号码/会员名/邮箱">
-                                <input type="password" placeholder="密码">
-                                <button type="button">立即登录</button>
+                                <input type="text" placeholder="手机号码/会员名/邮箱" class="user" >
+                                <input type="password" placeholder="密码" class="password">
+                                <button type="button" class="submit">立即登录</button>
                                 <p>
                                     <span>
                                         <a href="register.html"> 免费注册</a>
