--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
             <p>注册万表会员</p>
             <div class="r-content-from">
                 
-            	<form action="http://localhost/login.php" method="post" onsubmit="return check()" class="r-content-from1">
+            	<form action="http://localhost/register.php" method="post" onsubmit="return check()" class="r-content-from1">
                     <div>
                         <em class="r-content-from-phone"></em>
                         <input id="phone" type="text" placeholder="请输入手机号码" name="phone" maxlength="11">
