--- a/w_wanbiao-brand.html
+++ b/w_wanbiao-brand.html
@@ -31,89 +31,91 @@
                 <div class="w_brand-bt1">
                     <div class="w_brand-lt1"></div>
                     <div class="w_brand-lt2">
-                        <div class="w_brand-lt">
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">天梭TISSOT</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">浪琴LONGINES</div></a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3" >
-                                <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">欧米茄OMEGA</div></a>
-                            <a class="w_brand-lt3" >
-                                <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">美度MIDO</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">天梭TISSOT</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">浪琴LONGINES</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover" >欧米茄OMEGA</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
-                            </a>  
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">美度MIDO</div>
-                            </a> 
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">天梭TISSOT</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">浪琴LONGINES</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">欧米茄OMEGA</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
-                            </a>
-                            <a class="w_brand-lt3">
-                                <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
-                                <div class="w_brand_hover">美度MIDO</div>
-                            </a>
+                        <div class="w_brand-left1">
+                            <div class="w_brand-lt">
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">天梭TISSOT</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">浪琴LONGINES</div></a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3" >
+                                    <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">欧米茄OMEGA</div></a>
+                                <a class="w_brand-lt3" >
+                                    <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">美度MIDO</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">天梭TISSOT</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">浪琴LONGINES</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover" >欧米茄OMEGA</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
+                                </a>  
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">美度MIDO</div>
+                                </a> 
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/53d38d022dc443158671d3c191779268.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">天梭TISSOT</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/250c77d1912d4a4a862cd0b5008966d3.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士爱宝时官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/db8fde244fc24ef7b89491014dd7a6d2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">浪琴LONGINES</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/d651e7b01a554c239e4d636c66579014.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">瑞士迪沃斯官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/91dbcc5309474b21b1274b705bcc3fea.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">欧米茄OMEGA</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/41059a8fbb844ee38f8b8f84aa02e2ef.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">法国赫柏林官方旗舰店</div>
+                                </a>
+                                <a class="w_brand-lt3">
+                                    <img src="https://image8.wbiao.co/mall/a50a7c500035426fa32eedc543c8e0c2.jpg?x-oss-process=image/resize,w_100,h_70" alt="">
+                                    <div class="w_brand_hover">美度MIDO</div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="w_brand-lt4"></div>
