--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list1/list_right1.jpg">
+                                            <img src="images/list/list1/list_right1.jpg" class="lazy">
                                         </a>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list2/list_right2.png">
+                                            <img src="images/list/list2/list_right2.png" class="lazy">
                                         </a>
                                     </div>
                                 </div>
@@ -387,7 +387,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list3/list_right3.jpg">
+                                            <img src="images/list/list3/list_right3.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -540,7 +540,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list4/list_right4.jpg">
+                                            <img src="images/list/list4/list_right4.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -710,7 +710,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list5/list_right5.jpg">
+                                            <img src="images/list/list5/list_right5.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -780,7 +780,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list6/list_right6.jpg">
+                                            <img src="images/list/list6/list_right6.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -833,7 +833,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list7/list_right7.jpg">
+                                            <img src="images/list/list7/list_right7.jpg">
                                         </a>
                                     </div>
                                 </div>
@@ -881,7 +881,7 @@
                                     </div>
                                     <div class="index_left_nav_right_img">
                                         <a href="javascript:void(0)">
-                                            <img data-original="images/list/list8/list_right8.png">
+                                            <img src="images/list/list8/list_right8.png">
                                         </a>
                                     </div>
                                 </div>
